[package]
name = "telegram-bot-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carapax = "0.12.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
geo = "0.20.1"
#serde = "1.0.136"
futures-util = "0.3"
log = "0.4"
postgres = "0.19"
